--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <html>
     <head>
-        <title>Link league</title>
+        <title>brand title</title>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
         <script src="https://kit.fontawesome.com/914d0104bb.js" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div class="header">
-            <a href="#" class="logo">company</a>
+        <header>
+            <a href="#" class="logo">Link League</a>
             <div class="container pullDown">
                 <ul>
                     <li><a href="#" id="home">Home</a></li>
                     <li><a href="#" id="watch">Watch IPL</a></li>
                     <li><a href="#" id="book">Book IPL</a></li>
-                    <li><a href="#" id="host">Host A Match</a></li> 
-                    <li><a href="#" id="pfp"><img src="orum.jpg"></a></li>                   
+                    <li><a href="host.html" id="host">Host A Match</a></li> 
+                    <li><a href="https://cdn.discordapp.com/attachments/997731150321680497/1109404472821698621/Screenshot_2023-05-20-12-34-47-03_965bbf4d18d205f782c6b8409c5773a4.jpg" target="_blank" id="pfp"><img src="orum.jpg"></a></li>                   
                 </ul>
             </div>
-        </div>
+        </header>
 
             
         <div class="swiper">
@@ -36,14 +37,24 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
+        <h1 id="h3">What are you looking for?</h1>
         <div class="options">
             <div class="box">
-                <h1>Host a Match</h1>
+                <h1 id="hosti">Host a Match</h1>
                 <p>Find players to play cricket</p>
-                <i class="fa-solid fa-cricket-bat-ball" style="color: #B2F042;"></i>
+                <img src="cricketbat.png">
             </div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">
+                <h1 id="booki">Book IPL</h1>
+                <p>Book tickets and food for the latest IPL</p>
+                <img src="calender.png">
+                
+            </div>
+            <div class="box">
+                <h1 id="watchi">Watch IPL</h1>
+                <p>Become a cricket critic</p>
+                <img src="play.png">
+            </div>
         </div>
 
 
