--- a/host.html
+++ b/host.html
@@ -56,13 +56,13 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Link League</a>
+            <a href="#" class="logo">League Link</a>
             <div class="container pullDown">
                 <ul>
-                    <li><a href="#" id="home">Home</a></li>
+                    <li><a href="index.html" id="home">Home</a></li>
                     <li><a href="#" id="watch">Watch IPL</a></li>
-                    <li><a href="#" id="book">Book IPL</a></li>
-                    <li><a href="#" id="host">Host A Match</a></li> 
+                    <li><a href="book.html" id="book">Book IPL</a></li>
+                    <li><a href="host.html" id="host">Host A Match</a></li> 
                     <li><a href="https://cdn.discordapp.com/attachments/997731150321680497/1109404472821698621/Screenshot_2023-05-20-12-34-47-03_965bbf4d18d205f782c6b8409c5773a4.jpg" target="_blank" id="pfp"><img src="orum.jpg"></a></li>                   
                 </ul>
             </div>
@@ -112,6 +112,10 @@
                         </form>
                     </div>
                   </div>
+                  <div class="map">
+                    <iframe width="300" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=76.55960083007814%2C28.035622160834343%2C77.49343872070314%2C28.695406284421967&amp;layer=mapnik" style="border: 1px solid black; border-radius: 16px;"></iframe><br>
+                  </div>
+                  <img src="bigbat.png" class="bigbat">
                 </div>
             </div>
     </body>
