--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Link League</a>
+            <a href="#" class="logo">League Link</a>
             <div class="container pullDown">
                 <ul>
                     <li><a href="#" id="home">Home</a></li>
                     <li><a href="#" id="watch">Watch IPL</a></li>
-                    <li><a href="#" id="book">Book IPL</a></li>
+                    <li><a href="book.html" id="book">Book IPL</a></li>
                     <li><a href="host.html" id="host">Host A Match</a></li> 
                     <li><a href="https://cdn.discordapp.com/attachments/997731150321680497/1109404472821698621/Screenshot_2023-05-20-12-34-47-03_965bbf4d18d205f782c6b8409c5773a4.jpg" target="_blank" id="pfp"><img src="orum.jpg"></a></li>                   
                 </ul>
