--- a/host.html
+++ b/host.html
@@ -105,7 +105,7 @@
                       
                         </script>
                     </div>
-                    <div class="player">
+                    <div class="players">
                       <p>Number of players</p>
                         <form action="/action_page.php">
                             <input type="number" id="place" name="place" placeholder="Enter Number"> 
