added calender icon

--- a/book.html
+++ b/book.html
@@ -74,7 +74,7 @@
                 </ul>
             </div>
             </div>
-        <div class="belowheader"></div>
+        <div class="belowheader">
         <h1 id="bookipl">Book IPL tickets</h1>
         
         
@@ -130,6 +130,9 @@
           <button onclick="myFunction()">
         PROCEED
           </button>
+          </div>
+          <img src="cal.png" style="margin-left: 200px;">
+        </div>
     </body>
 </html>
 
